@@ -13,7 +13,7 @@ LICENSE=	GPLv2
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	danfe
-GH_TAGNAME=	master
+GH_TAGNAME=	${GH_COMMIT}
 GH_COMMIT=	22cbc47
 
 PLIST_FILES=	bin/${PORTNAME}
