@@ -25,7 +25,7 @@ USE_LDCONFIG=	yes
 USE_GITHUB=	yes
 GH_ACCOUNT=	zloidemon
 GH_COMMIT=	7d0f35c
-GH_TAGNAME=	master
+GH_TAGNAME=	${GH_COMMIT}
 
 MAKE_JOBS_SAFE=	yes
 
