@@ -19,7 +19,7 @@ LICENSE=	GPLv3
 USE_GITHUB=	yes
 GH_ACCOUNT=	blynn
 GH_PROJECT=	${PORTNAME}
-GH_TAGNAME=	master
+GH_TAGNAME=	${GH_COMMIT}
 GH_COMMIT=	634e7c9
 
 USE_SDL=	sdl ttf
