@@ -23,7 +23,7 @@ USE_GMAKE=	yes
 USE_GITHUB=	yes
 GH_ACCOUNT=	zloidemon
 GH_COMMIT=	cdac9a9
-GH_TAGNAME=	master
+GH_TAGNAME=	${GH_COMMIT}
 PORTEXAMPLES=	*
 
 CFLAGS+=	-I${LOCALBASE}/include \
